--- a/layout/layout.ejs
+++ b/layout/layout.ejs
@@ -3,7 +3,7 @@
     <%- partial('_partial/head') %>
     <body> 
         <div class="menu">
-            <img class="menu-logo" src="/css/logo-white.svg"/>
+            <img class="menu-logo" src="/img/logo-white.svg"/>
         </div>
         <%- body %>
         <%- partial('_partial/footer') %>
